Add GiftCertificateServiceImplTest testSave method