@@ -30,6 +30,9 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation 'org.mockito:mockito-junit-jupiter:3.11.2'
 
 }
 
@@ -38,4 +41,6 @@ tasks.named('test') {
 }
 
 compileJava { options.compilerArgs += [ '-Amapstruct.defaultComponentModel=spring' ] }
-
+test {
+    jvmArgs '--add-exports=java.base/jdk.internal.org.objectweb.asm.util=ALL-UNNAMED'
+}
